major(github-exporter): add more configuration to values

--- a/stable/github-exporter/ci/default-values.yaml
+++ b/stable/github-exporter/ci/default-values.yaml
@@ -1,5 +1,16 @@
 ---
 config:
-  token: dummy
+  authType: none
+
+exporter:
+  orgs: promhippie
+  repos: promhippie/*
+
+webhook:
+  enabled: true
+  secret: QjT9D432KhI9NwMAxJ9dNDZ7
+
+database:
+  enabled: true
 
 ...
