--- a/stable/github-exporter/templates/secret.yaml
+++ b/stable/github-exporter/templates/secret.yaml
@@ -1,4 +1,5 @@
-{{- if not .Values.config.existingSecret -}}
+{{- if and (not .Values.config.existingSecret) (ne .Values.config.authType "none") }}
+---
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,11 +9,35 @@ metadata:
 type: Opaque
 data:
 {{- if eq .Values.config.authType "token" }}
-  {{ .Values.config.tokenKey }}: {{ required "Requires token secret!" .Values.config.token | b64enc | quote }}
+  {{ .Values.config.tokenKey }}: {{ default "" .Values.config.token | toString | b64enc | quote }}
 {{- end }}
 {{- if eq .Values.config.authType "app" }}
-  {{ .Values.config.appIdKey }}: {{ required "Requires appId secret!" .Values.config.appId | toString | b64enc | quote }}
-  {{ .Values.config.installationIdKey }}: {{ required "Requires installationId secret!" .Values.config.installationId | toString | b64enc | quote }}
-  {{ .Values.config.privateKeyKey }}: {{ required "Requires privateKey secret!" .Values.config.privateKey | b64enc | quote }}
+  {{ .Values.config.appIdKey }}: {{ default "" .Values.config.appId | toString | b64enc | quote }}
+  {{ .Values.config.installationIdKey }}: {{ default "" .Values.config.installationId | toString | b64enc | quote }}
+  {{ .Values.config.privateKeyKey }}: {{ default "" .Values.config.privateKey | b64enc | quote }}
 {{- end }}
+{{- end -}}
+{{- if and (not .Values.webhook.existingSecret) .Values.webhook.enabled }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ template "github-exporter.webhookSecret" . }}
+  labels:
+    {{- include "github-exporter.labels" . | nindent 4 }}
+type: Opaque
+data:
+  {{ .Values.webhook.secretKey }}: {{ default "" .Values.webhook.secret | toString | b64enc | quote }}
+{{- end -}}
+{{- if and (not .Values.database.existingSecret) .Values.database.enabled }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ template "github-exporter.databaseSecret" . }}
+  labels:
+    {{- include "github-exporter.labels" . | nindent 4 }}
+type: Opaque
+data:
+  {{ .Values.database.dsnKey }}: {{ default "" .Values.database.dsn | toString | b64enc | quote }}
 {{- end -}}
