--- a/stable/jenkins-exporter/templates/deployment.yaml
+++ b/stable/jenkins-exporter/templates/deployment.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     {{- include "jenkins-exporter.labels" . | nindent 4 }}
   annotations:
+{{- if .Values.files }}
+    checksum/configmap: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+{{- end }}
 {{- if not .Values.config.existingSecret }}
     checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
 {{- end }}
@@ -30,17 +33,27 @@ spec:
       imagePullSecrets:
       {{- range .Values.image.pullSecrets }}
         - name: {{ . }}
-      {{- end}}
+      {{- end }}
+      {{- end }}
+      {{- with .Values.securityContext }}
+      securityContext:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if .Values.extraInitContainers }}
+      initContainers:
+        {{ toYaml .Values.extraInitContainers | nindent 8 }}
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- with .Values.podSecurityContext }}
           securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           env:
             - name: JENKINS_EXPORTER_URL
-              value: {{ required "Requires Jenkins URL" .Values.config.url | quote }}
+              value: {{ .Values.config.url | quote }}
             - name: JENKINS_EXPORTER_USERNAME
               valueFrom:
                 secretKeyRef:
@@ -51,6 +64,10 @@ spec:
                 secretKeyRef:
                   name: {{ .Values.config.existingSecret | default (include "jenkins-exporter.fullname" .) }}
                   key: {{ .Values.config.passwordKey }}
+            {{- if ne .Values.collector.jobs nil }}
+            - name: JENKINS_EXPORTER_COLLECTOR_JOBS
+              value: "{{ .Values.collector.jobs }}"
+            {{- end }}
             {{- range $key, $value := .Values.extraEnvSecrets }}
             - name: {{ $key }}
               valueFrom:
@@ -89,6 +106,16 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- end }}
+          {{- if or .Values.extraVolumeMounts .Values.files }}
+          volumeMounts:
+            {{- if .Values.files }}
+            - name: files
+              mountPath: /etc/jenkins-exporter-files
+            {{- end }}
+            {{- if .Values.extraVolumeMounts }}
+            {{ toYaml .Values.extraVolumeMounts | nindent 12 }}
+            {{- end }}
+          {{- end }}
       {{- if .Values.nodeSelector }}
       nodeSelector:
         {{ toYaml .Values.nodeSelector | nindent 8 }}
@@ -100,4 +127,15 @@ spec:
       {{- with .Values.tolerations }}
       tolerations:
         {{ toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if or .Values.extraVolumes .Values.files }}
+      volumes:
+        {{- if .Values.files }}
+        - name: files
+          configMap:
+            name: {{ include "jenkins-exporter.fullname" . }}-files
+        {{- end }}
+        {{- if .Values.extraVolumes }}
+        {{ toYaml .Values.extraVolumes | nindent 8 }}
+        {{- end }}
       {{- end }}
