--- a/stable/jenkins-exporter/templates/secret.yaml
+++ b/stable/jenkins-exporter/templates/secret.yaml
@@ -7,6 +7,6 @@ metadata:
     {{- include "jenkins-exporter.labels" . | nindent 4 }}
 type: Opaque
 data:
-   {{ .Values.config.usernameKey }}: {{ .Values.config.username | b64enc | quote }}
-   {{ .Values.config.passwordKey }}: {{ .Values.config.password | b64enc | quote }}
+   {{ .Values.config.usernameKey }}: {{ default "" .Values.config.username | toString | b64enc | quote }}
+   {{ .Values.config.passwordKey }}: {{ default "" .Values.config.password | toString | b64enc | quote }}
 {{- end -}}
