major(scw-exporter): add more configuration to values

--- a/stable/scw-exporter/templates/secret.yaml
+++ b/stable/scw-exporter/templates/secret.yaml
@@ -7,6 +7,6 @@ metadata:
     {{- include "scw-exporter.labels" . | nindent 4 }}
 type: Opaque
 data:
-   {{ .Values.config.accessKey }}: {{ required "Requires access key!" .Values.config.access | b64enc | quote }}
-   {{ .Values.config.secretKey }}: {{ required "Requires secret key!" .Values.config.secret | b64enc | quote }}
+   {{ .Values.config.accessKey }}: {{ default "" .Values.config.access | toString | b64enc | quote }}
+   {{ .Values.config.secretKey }}: {{ default "" .Values.config.secret | toString | b64enc | quote }}
 {{- end -}}
