--- a/stable/scw-exporter/templates/deployment.yaml
+++ b/stable/scw-exporter/templates/deployment.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     {{- include "scw-exporter.labels" . | nindent 4 }}
   annotations:
+{{- if .Values.files }}
+    checksum/configmap: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+{{- end }}
 {{- if not .Values.config.existingSecret }}
     checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
 {{- end }}
@@ -30,14 +33,24 @@ spec:
       imagePullSecrets:
       {{- range .Values.image.pullSecrets }}
         - name: {{ . }}
-      {{- end}}
+      {{- end }}
+      {{- end }}
+      {{- with .Values.securityContext }}
+      securityContext:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if .Values.extraInitContainers }}
+      initContainers:
+        {{ toYaml .Values.extraInitContainers | nindent 8 }}
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- with .Values.podSecurityContext }}
           securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           env:
             {{- if .Values.config.org }}
             - name: SCW_EXPORTER_ORG
@@ -65,6 +78,30 @@ spec:
                 secretKeyRef:
                   name: {{ .Values.config.existingSecret | default (include "scw-exporter.fullname" .) }}
                   key: {{ .Values.config.secretKey }}
+            {{- if ne .Values.collector.dashboard nil }}
+            - name: SCW_EXPORTER_COLLECTOR_DASHBOARD
+              value: "{{ .Values.collector.dashboard }}"
+            {{- end }}
+            {{- if ne .Values.collector.securityGroups nil }}
+            - name: SCW_EXPORTER_COLLECTOR_SECURITY_GROUPS
+              value: "{{ .Values.collector.securityGroups }}"
+            {{- end }}
+            {{- if ne .Values.collector.servers nil }}
+            - name: SCW_EXPORTER_COLLECTOR_SERVERS
+              value: "{{ .Values.collector.servers }}"
+            {{- end }}
+            {{- if ne .Values.collector.baremtal nil }}
+            - name: SCW_EXPORTER_COLLECTOR_BAREMETAL
+              value: "{{ .Values.collector.baremtal }}"
+            {{- end }}
+            {{- if ne .Values.collector.snapshots nil }}
+            - name: SCW_EXPORTER_COLLECTOR_SNAPSHOTS
+              value: "{{ .Values.collector.snapshots }}"
+            {{- end }}
+            {{- if ne .Values.collector.volumes nil }}
+            - name: SCW_EXPORTER_COLLECTOR_VOLUMES
+              value: "{{ .Values.collector.volumes }}"
+            {{- end }}
             {{- range $key, $value := .Values.extraEnvSecrets }}
             - name: {{ $key }}
               valueFrom:
@@ -103,6 +140,16 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- end }}
+          {{- if or .Values.extraVolumeMounts .Values.files }}
+          volumeMounts:
+            {{- if .Values.files }}
+            - name: files
+              mountPath: /etc/scw-exporter-files
+            {{- end }}
+            {{- if .Values.extraVolumeMounts }}
+            {{ toYaml .Values.extraVolumeMounts | nindent 12 }}
+            {{- end }}
+          {{- end }}
       {{- if .Values.nodeSelector }}
       nodeSelector:
         {{ toYaml .Values.nodeSelector | nindent 8 }}
@@ -114,4 +161,15 @@ spec:
       {{- with .Values.tolerations }}
       tolerations:
         {{ toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if or .Values.extraVolumes .Values.files }}
+      volumes:
+        {{- if .Values.files }}
+        - name: files
+          configMap:
+            name: {{ include "scw-exporter.fullname" . }}-files
+        {{- end }}
+        {{- if .Values.extraVolumes }}
+        {{ toYaml .Values.extraVolumes | nindent 8 }}
+        {{- end }}
       {{- end }}
