major(hcloud-exporter): add more configuration to values

--- a/stable/hcloud-exporter/templates/deployment.yaml
+++ b/stable/hcloud-exporter/templates/deployment.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     {{- include "hcloud-exporter.labels" . | nindent 4 }}
   annotations:
+{{- if .Values.files }}
+    checksum/configmap: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+{{- end }}
 {{- if not .Values.config.existingSecret }}
     checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
 {{- end }}
@@ -30,20 +33,62 @@ spec:
       imagePullSecrets:
       {{- range .Values.image.pullSecrets }}
         - name: {{ . }}
-      {{- end}}
+      {{- end }}
+      {{- end }}
+      {{- with .Values.securityContext }}
+      securityContext:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if .Values.extraInitContainers }}
+      initContainers:
+        {{ toYaml .Values.extraInitContainers | nindent 8 }}
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- with .Values.podSecurityContext }}
           securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           env:
             - name: HCLOUD_EXPORTER_TOKEN
               valueFrom:
                 secretKeyRef:
                   name: {{ .Values.config.existingSecret | default (include "hcloud-exporter.fullname" .) }}
                   key: {{ .Values.config.tokenKey }}
+            {{- if ne .Values.collector.floatingIps nil }}
+            - name: HCLOUD_EXPORTER_COLLECTOR_FLOATING_IPS
+              value: "{{ .Values.collector.floatingIps }}"
+            {{- end }}
+            {{- if ne .Values.collector.images nil }}
+            - name: HCLOUD_EXPORTER_COLLECTOR_IMAGES
+              value: "{{ .Values.collector.images }}"
+            {{- end }}
+            {{- if ne .Values.collector.pricing nil }}
+            - name: HCLOUD_EXPORTER_COLLECTOR_PRICING
+              value: "{{ .Values.collector.pricing }}"
+            {{- end }}
+            {{- if ne .Values.collector.servers nil }}
+            - name: HCLOUD_EXPORTER_COLLECTOR_SERVERS
+              value: "{{ .Values.collector.servers }}"
+            {{- end }}
+            {{- if ne .Values.collector.serverMetrics nil }}
+            - name: HCLOUD_EXPORTER_COLLECTOR_SERVER_METRICS
+              value: "{{ .Values.collector.serverMetrics }}"
+            {{- end }}
+            {{- if ne .Values.collector.loadBalancers nil }}
+            - name: HCLOUD_EXPORTER_COLLECTOR_LOAD_BALANCERS
+              value: "{{ .Values.collector.loadBalancers }}"
+            {{- end }}
+            {{- if ne .Values.collector.sshKeys nil }}
+            - name: HCLOUD_EXPORTER_COLLECTOR_SSH_KEYS
+              value: "{{ .Values.collector.sshKeys }}"
+            {{- end }}
+            {{- if ne .Values.collector.volumes nil }}
+            - name: HCLOUD_EXPORTER_COLLECTOR_VOLUMES
+              value: "{{ .Values.collector.volumes }}"
+            {{- end }}
             {{- range $key, $value := .Values.extraEnvSecrets }}
             - name: {{ $key }}
               valueFrom:
@@ -82,6 +127,16 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- end }}
+          {{- if or .Values.extraVolumeMounts .Values.files }}
+          volumeMounts:
+            {{- if .Values.files }}
+            - name: files
+              mountPath: /etc/hcloud-exporter-files
+            {{- end }}
+            {{- if .Values.extraVolumeMounts }}
+            {{ toYaml .Values.extraVolumeMounts | nindent 12 }}
+            {{- end }}
+          {{- end }}
       {{- if .Values.nodeSelector }}
       nodeSelector:
         {{ toYaml .Values.nodeSelector | nindent 8 }}
@@ -93,4 +148,15 @@ spec:
       {{- with .Values.tolerations }}
       tolerations:
         {{ toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if or .Values.extraVolumes .Values.files }}
+      volumes:
+        {{- if .Values.files }}
+        - name: files
+          configMap:
+            name: {{ include "hcloud-exporter.fullname" . }}-files
+        {{- end }}
+        {{- if .Values.extraVolumes }}
+        {{ toYaml .Values.extraVolumes | nindent 8 }}
+        {{- end }}
       {{- end }}
