--- a/stable/hcloud-exporter/templates/secret.yaml
+++ b/stable/hcloud-exporter/templates/secret.yaml
@@ -7,5 +7,5 @@ metadata:
     {{- include "hcloud-exporter.labels" . | nindent 4 }}
 type: Opaque
 data:
-   {{ .Values.config.tokenKey }}: {{ required "Requires token secret!" .Values.config.token | b64enc | quote }}
+   {{ .Values.config.tokenKey }}: {{ default "" .Values.config.token | toString | b64enc | quote }}
 {{- end -}}
