--- a/stable/github-exporter/templates/deployment.yaml
+++ b/stable/github-exporter/templates/deployment.yaml
@@ -23,10 +23,16 @@ spec:
     metadata:
       labels:
         {{- include "github-exporter.labels" . | nindent 8 }}
-{{- if  .Values.annotations }}
       annotations:
+        {{- if .Values.files }}
+        checksum/configmap: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+        {{- end }}
+        {{- if and (not .Values.config.existingSecret) (not .Values.webhook.existingSecret) (not .Values.database.existingSecret) }}
+        checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
+        {{- end }}
+        {{- if  .Values.annotations }}
         {{- toYaml .Values.annotations | nindent 8 }}
-{{- end }}
+        {{- end }}
     spec:
       serviceAccountName: {{ include "github-exporter.serviceAccountName" . }}
       {{- if .Values.image.pullSecrets }}
