--- a/stable/prometheus-hetzner-sd/templates/deployment.yaml
+++ b/stable/prometheus-hetzner-sd/templates/deployment.yaml
@@ -23,10 +23,16 @@ spec:
     metadata:
       labels:
         {{- include "prometheus-hetzner-sd.labels" . | nindent 8 }}
-{{- if  .Values.annotations }}
       annotations:
+        {{- if .Values.files }}
+        checksum/configmap: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+        {{- end }}
+        {{- if .Values.credentials }}
+        checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
+        {{- end }}
+        {{- if  .Values.annotations }}
         {{- toYaml .Values.annotations | nindent 8 }}
-{{- end }}
+        {{- end }}
     spec:
       serviceAccountName: {{ include "prometheus-hetzner-sd.serviceAccountName" . }}
       {{- if .Values.image.pullSecrets }}
