--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -51,7 +51,8 @@ jobs:
         id: secrets
         run: |
           for FILE in $(find stable -iname \*.enc); do
-            helm secrets decrypt ${FILE} > ${FILE%.enc}.yaml
+            helm secrets decrypt ${FILE} >| ${FILE%.enc}.yaml
+            echo >> ${FILE%.enc}.yaml
           done
 
       - name: Detect testing
