--- a/stable/dockerhub-exporter/Chart.yaml
+++ b/stable/dockerhub-exporter/Chart.yaml
@@ -6,7 +6,7 @@ description: A Helm chart for dockerhub-exporter
 type: application
 
 appVersion: 1.0.0
-version: 1.1.0
+version: 1.1.1
 
 home: https://promhippie.github.io/dockerhub_exporter/
 icon: https://raw.githubusercontent.com/simple-icons/simple-icons/develop/icons/docker.svg
@@ -30,5 +30,10 @@ annotations:
   artifacthub.io/signKey: |
     fingerprint: B8BB213D9E131E46D2EBE22E44E93172C6FDE7E6
     url: https://raw.githubusercontent.com/promhippie/charts/master/promhippie.key
+  artifacthub.io/links: |-
+    - name: Source
+      url: https://github.com/promhippie/dockerhub_exporter
+    - name: Chart
+      url: https://github.com/promhippie/charts/tree/master/stable/dockerhub-exporter
 
 ...
