--- a/stable/github-exporter/Chart.yaml
+++ b/stable/github-exporter/Chart.yaml
@@ -6,7 +6,7 @@ description: A Helm chart for github-exporter
 type: application
 
 appVersion: 2.4.0
-version: 3.5.0
+version: 3.5.1
 
 home: https://promhippie.github.io/github_exporter/
 icon: https://raw.githubusercontent.com/simple-icons/simple-icons/develop/icons/github.svg
@@ -29,5 +29,10 @@ annotations:
   artifacthub.io/signKey: |
     fingerprint: B8BB213D9E131E46D2EBE22E44E93172C6FDE7E6
     url: https://raw.githubusercontent.com/promhippie/charts/master/promhippie.key
+  artifacthub.io/links: |-
+    - name: Source
+      url: https://github.com/promhippie/github_exporter
+    - name: Chart
+      url: https://github.com/promhippie/charts/tree/master/stable/github-exporter
 
 ...
