--- a/stable/jenkins-exporter/Chart.yaml
+++ b/stable/jenkins-exporter/Chart.yaml
@@ -6,7 +6,7 @@ description: A Helm chart for jenkins-exporter
 type: application
 
 appVersion: 1.0.0
-version: 1.1.0
+version: 1.1.1
 
 home: https://promhippie.github.io/jenkins_exporter/
 icon: https://raw.githubusercontent.com/simple-icons/simple-icons/develop/icons/jenkins.svg
@@ -29,5 +29,10 @@ annotations:
   artifacthub.io/signKey: |
     fingerprint: B8BB213D9E131E46D2EBE22E44E93172C6FDE7E6
     url: https://raw.githubusercontent.com/promhippie/charts/master/promhippie.key
+  artifacthub.io/links: |-
+    - name: Source
+      url: https://github.com/promhippie/jenkins_exporter
+    - name: Chart
+      url: https://github.com/promhippie/charts/tree/master/stable/jenkins-exporter
 
 ...
