--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,12 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     if: github.repository == 'promhippie/charts'
 
+    permissions:
+      contents: write
+      packages: write
+
     steps:
       - name: Checkout source
         id: source
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.BOT_ACCESS_TOKEN }}
           fetch-depth: 0
 
       - name: Setup helm
@@ -53,7 +56,7 @@ jobs:
         id: releaser
         uses: helm/chart-releaser-action@v1.5.0
         env:
-          CR_TOKEN: ${{ secrets.BOT_ACCESS_TOKEN }}
+          CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CR_KEYRING: secring.gpg
           CR_PASSPHRASE_FILE: passphrase
         with:
@@ -62,7 +65,7 @@ jobs:
 
       - name: Push charts
         run: |
-          echo "${{ secrets.BOT_ACCESS_TOKEN }}" | helm registry login --username bothippie --password-stdin ghcr.io
+          echo "${{ secrets.GITHUB_TOKEN }}" | helm registry login --username bothippie --password-stdin ghcr.io
 
           for pkg in .cr-release-packages/*.tgz; do
             if [ -z "${pkg:-}" ]; then
