--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.repository == 'promhippie/charts'
 
-    permissions: write-all
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout source
@@ -63,7 +64,7 @@ jobs:
 
       - name: Push charts
         run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | helm registry login --username bothippie --password-stdin ghcr.io
+          echo "${{ secrets.BOT_ACCESS_TOKEN }}" | helm registry login --username bothippie --password-stdin ghcr.io
 
           for pkg in .cr-release-packages/*.tgz; do
             if [ -z "${pkg:-}" ]; then
