--- a/.github/workflows/helmdocs.yml
+++ b/.github/workflows/helmdocs.yml
@@ -7,19 +7,31 @@ name: helmdocs
     branches:
       - master
 
+permissions:
+  contents: write
+
 jobs:
   helmdocs:
     runs-on: ubuntu-latest
     if: github.repository == 'promhippie/charts'
 
-    permissions:
-      contents: write
-
     steps:
+      - name: Generate token
+        id: token
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ secrets.TOKEN_EXCHANGE_APP }}
+          installation_retrieval_mode: id
+          installation_retrieval_payload: ${{ secrets.TOKEN_EXCHANGE_INSTALL }}
+          private_key: ${{ secrets.TOKEN_EXCHANGE_KEY }}
+          permissions: >-
+            {"contents": "write"}
+
       - name: Checkout source
         id: source
         uses: actions/checkout@v4
         with:
+          token: ${{ steps.token.outputs.token }}
           fetch-depth: 0
 
       - name: Update readme
