--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -6,21 +6,32 @@ name: updates
   schedule:
     - cron: "0 8 * * *"
 
+permissions:
+  contents: read
+  issues: write
+
 jobs:
   updates:
     runs-on: ubuntu-latest
     if: github.repository == 'promhippie/charts'
 
-    permissions:
-      contents: write
-      issues: write
-      pull-requests: write
-
     steps:
+      - name: Generate token
+        id: token
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ secrets.TOKEN_EXCHANGE_APP }}
+          installation_retrieval_mode: id
+          installation_retrieval_payload: ${{ secrets.TOKEN_EXCHANGE_INSTALL }}
+          private_key: ${{ secrets.TOKEN_EXCHANGE_KEY }}
+          permissions: >-
+            {"contents": "write", "pull_requests": "write"}
+
       - name: Checkout source
         id: source
         uses: actions/checkout@v4
         with:
+          token: ${{ steps.token.outputs.token }}
           fetch-depth: 0
 
       - name: Setup golang
@@ -43,7 +54,7 @@ jobs:
           title: "chore: updated versions"
           body: "New versions found, please review!"
           assignees: tboerger
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ steps.token.outputs.token }}
 
       - name: Create issue
         id: issue
