ci: allow commits by promhippie app

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -66,6 +66,7 @@ branches:
       restrictions:
         apps:
           - renovate
+          - promhippie
         users: []
         teams:
           - admins
